src/test/ui/feature-gate-wasm_import_memory.stderr
error[E0658]: wasm_import_memory attribute is currently unstable
  --> $DIR/feature-gate-wasm_import_memory.rs:11:1
   |
11 | #![wasm_import_memory] //~ ERROR: currently unstable
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(wasm_import_memory)] to the crate attributes to enable

error: aborting due to previous error

